--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 
 <head>
     <meta charset="UTF-8">
@@ -19,9 +19,9 @@
 
         <div class="hamburger-div">
             <button aria-label="Przycisk otwierający i zamykający menu" class="hamburger hamburger--3dx">
-                <div class="hamburger-box">
-                    <div class="hamburger-inner"></div>
-                </div>
+                <span class="hamburger-box">
+                    <span class="hamburger-inner"></span>
+                </span>
             </button>
         </div>
 
@@ -104,15 +104,14 @@
                 <img src="./dist/images/lilu-mobile.jpg" class="our-localization__element-img" alt="">
                 <ul class="our-localization__element-list">
                     <li class="our-localization__element-list-item">
-                        <p class="our-localization__element-list-item-text">
                         <h3 class="our-localization__element-list-item-heading">
                             Miasto:
                         </h3>
-                        <em>Warszawa, Kwiatowa 23</em>
+                        <p class="our-localization__element-list-item-text">
+                            <em>Warszawa, Kwiatowa 23</em>
                         </p>
                     </li>
                     <li class="our-localization__element-list-item">
-                        <p class="our-localization__element-list-item-text">
                         <h3 class="our-localization__element-list-item-heading">
                             Trenerzy:
                         </h3>
@@ -145,31 +144,30 @@
                                 </p>
                             </li>
                         </ul>
-                        </p>
 
                     <li class="our-localization__element-list-item">
-                        <p class="our-localization__element-list-item-text">
                         <h3 class="our-localization__element-list-item-heading">
                             Telefon:
                         </h3>
-                        <em>Warszawa, Kwiatowa 23</em>
+                        <p class="our-localization__element-list-item-text">
+                            <em>Warszawa, Kwiatowa 23</em>
                         </p>
                     </li>
                 </ul>
             </div>
+
             <div class="our-localization__element scroll-animation bottom">
                 <img src="./dist/images/lilu-mobile.jpg" class="our-localization__element-img" alt="">
                 <ul class="our-localization__element-list">
                     <li class="our-localization__element-list-item">
-                        <p class="our-localization__element-list-item-text">
                         <h3 class="our-localization__element-list-item-heading">
                             Miasto:
                         </h3>
-                        <em>Warszawa, Kwiatowa 23</em>
+                        <p class="our-localization__element-list-item-text">
+                            <em>Warszawa, Kwiatowa 23</em>
                         </p>
                     </li>
                     <li class="our-localization__element-list-item">
-                        <p class="our-localization__element-list-item-text">
                         <h3 class="our-localization__element-list-item-heading">
                             Trenerzy:
                         </h3>
@@ -202,14 +200,13 @@
                                 </p>
                             </li>
                         </ul>
-                        </p>
 
                     <li class="our-localization__element-list-item">
-                        <p class="our-localization__element-list-item-text">
                         <h3 class="our-localization__element-list-item-heading">
                             Telefon:
                         </h3>
                         <em>Warszawa, Kwiatowa 23</em>
+                        <p class="our-localization__element-list-item-text">
                         </p>
                     </li>
                 </ul>
@@ -218,15 +215,14 @@
                 <img src="./dist/images/lilu-mobile.jpg" class="our-localization__element-img" alt="">
                 <ul class="our-localization__element-list">
                     <li class="our-localization__element-list-item">
-                        <p class="our-localization__element-list-item-text">
                         <h3 class="our-localization__element-list-item-heading">
                             Miasto:
                         </h3>
-                        <em>Warszawa, Kwiatowa 23</em>
+                        <p class="our-localization__element-list-item-text">
+                            <em>Warszawa, Kwiatowa 23</em>
                         </p>
                     </li>
                     <li class="our-localization__element-list-item">
-                        <p class="our-localization__element-list-item-text">
                         <h3 class="our-localization__element-list-item-heading">
                             Trenerzy:
                         </h3>
@@ -259,14 +255,13 @@
                                 </p>
                             </li>
                         </ul>
-                        </p>
-
+                    </li>
                     <li class="our-localization__element-list-item">
-                        <p class="our-localization__element-list-item-text">
                         <h3 class="our-localization__element-list-item-heading">
                             Telefon:
                         </h3>
-                        <em>Warszawa, Kwiatowa 23</em>
+                        <p class="our-localization__element-list-item-text">
+                            <em>Warszawa, Kwiatowa 23</em>
                         </p>
                     </li>
                 </ul>
