--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header class="header">
 
-        <div class="hamburger-div">
+        <div class="hamburger-div click-element">
             <button aria-label="Przycisk otwierający i zamykający menu" class="hamburger hamburger--3dx">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
@@ -27,11 +27,12 @@
 
         <nav class="nav">
             <ul class="nav__list">
-                <li class="nav__list-item"><a href="#about-firm" class="nav__link">O firmie</a></li>
-                <li class="nav__list-item"><a href="#why-we" class="nav__link">Dlaczego my?</a></li>
-                <li class="nav__list-item"><a href="#our-localization" class="nav__link">Nasze lokalizacje</a></li>
-                <li class="nav__list-item"><a href="#opinion" class="nav__link">Opinie</a></li>
-                <li class="nav__list-item"><a href="#footer" class="nav__link">Kontakt</a></li>
+                <li class="nav__list-item"><a href="#about-firm" class="nav__link click-element">O firmie</a></li>
+                <li class="nav__list-item"><a href="#why-we" class="nav__link click-element">Dlaczego my?</a></li>
+                <li class="nav__list-item"><a href="#our-localization" class="nav__link click-element">Nasze
+                        lokalizacje</a></li>
+                <li class="nav__list-item"><a href="#opinion" class="nav__link click-element">Opinie</a></li>
+                <li class="nav__list-item"><a href="#footer" class="nav__link click-element">Kontakt</a></li>
             </ul>
         </nav>
 
@@ -49,8 +50,8 @@
                 </p>
 
                 <div class="header__box-links">
-                    <a href="#about-firm" class="header__link">O firmie</a>
-                    <a href="#contact" class="header__link">Kontakt</a>
+                    <a href="#about-firm" class="header__link click-element click-element--black">O firmie</a>
+                    <a href="#contact" class="header__link click-element click-element--black">Kontakt</a>
                 </div>
             </div>
             <div class="box">
@@ -272,10 +273,10 @@
     <section id="opinion" class="opinion section-padding gray">
         <h2 class="h2 opinion__title">Opinie</h2>
         <div class="wrapper slider">
-            <button class="slider__btn slider__next-btn" aria-label="Przycisk następnego slajdu"><img
-                    src="./dist/images/icons/arrow-right.svg" alt="" class="slider__btn-icon"></button>
-            <button class="slider__btn slider__back-btn" aria-label="Przycisk poprzedniego slajdu"><img
-                    src="./dist/images/icons/arrow-left.svg" alt="" class="slider__btn-icon"></button>
+            <button class="slider__btn slider__back-btn click-element" aria-label="Przycisk poprzedniego slajdu"><img
+                    src="./dist/images/icons/arrow-left.svg" alt="" class="slider__btn-icon "></button>
+            <button class="slider__btn slider__next-btn click-element" aria-label="Przycisk następnego slajdu"><img
+                    src="./dist/images/icons/arrow-right.svg" alt="" class="slider__btn-icon "></button>
 
             <div class="slider__extra-box">
                 <div class="slider__box">
