Improve hamburger focus

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <body>
     <header class="header">
 
-        <div class="hamburger-div click-element">
-            <button aria-label="Przycisk otwierający i zamykający menu" class="hamburger hamburger--3dx">
+        <div class="hamburger-div">
+            <button aria-label="Przycisk otwierający i zamykający menu" class="hamburger hamburger--3dx click-element">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
                 </span>
