Improve html css js
- extend the automatic slide change
- px changed to rem and em
- improve style on medium
- add home link to navigation

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
         <nav class="nav">
             <ul class="nav__list">
+                <li class="nav__list-item"><a href="#" class="nav__link click-element">Home</a></li>
                 <li class="nav__list-item"><a href="#about-firm" class="nav__link click-element">O firmie</a></li>
                 <li class="nav__list-item"><a href="#why-we" class="nav__link click-element">Dlaczego my?</a></li>
                 <li class="nav__list-item"><a href="#our-localization" class="nav__link click-element">Nasze
@@ -132,7 +133,7 @@
                                         class="our-localization__element-coach-list-img">
                                 </div>
                                 <p class="our-localization__element-coach-list-text">
-                                    Bartek Lewandowski
+                                    Bartek Lewy
                                 </p>
                             </li>
                             <li class="our-localization__element-coach-list">
