I don't want comment...'

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
                 <div class="header__box-links">
                     <a href="#about-firm" class="header__link click-element click-element--black">O firmie</a>
-                    <a href="#contact" class="header__link click-element click-element--black">Kontakt</a>
+                    <a href="#footer" class="header__link click-element click-element--black">Kontakt</a>
                 </div>
             </div>
             <div class="box">
