--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                                         class="our-localization__element-coach-list-img">
                                 </div>
                                 <p class="our-localization__element-coach-list-text">
-                                    Anna Lewandowska
+                                    Anna Miła
                                 </p>
                             </li>
                             <li class="our-localization__element-coach-list">
