Delete some images, change our localization design, improve code, improve footer view on 4k

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa neque exercitationem dolores ut blanditiis harum odio mollitia non nihil qui distinctio, ab modi laborum deleniti!">
     <title>FitnessGym Co.</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&display=swap"
@@ -136,29 +135,17 @@
                             Trenerzy:
                         </h3>
                         <ul class="our-localization__element-list">
-                            <li class="our-localization__element-coach-list">
-                                <div class="our-localization__element-coach-list-box">
-                                    <img src="./dist/images/boy-face.jpg" alt=""
-                                        class="our-localization__element-coach-list-img">
-                                </div>
+                            <li class="our-localization__element-coach-list">                                
                                 <p class="our-localization__element-coach-list-text">
                                     Jan Kowalski
                                 </p>
                             </li>
-                            <li class="our-localization__element-coach-list">
-                                <div class="our-localization__element-coach-list-box">
-                                    <img src="./dist/images/man-face8.jpg" alt=""
-                                        class="our-localization__element-coach-list-img">
-                                </div>
+                            <li class="our-localization__element-coach-list">                                
                                 <p class="our-localization__element-coach-list-text">
                                     Bartek Lewy
                                 </p>
                             </li>
-                            <li class="our-localization__element-coach-list">
-                                <div class="our-localization__element-coach-list-box">
-                                    <img src="./dist/images/man-face7.jpg" alt=""
-                                        class="our-localization__element-coach-list-img">
-                                </div>
+                            <li class="our-localization__element-coach-list">                                
                                 <p class="our-localization__element-coach-list-text">
                                     Bartek Kowalski
                                 </p>
@@ -193,29 +180,17 @@
                             Trenerzy:
                         </h3>
                         <ul class="our-localization__element-list">
-                            <li class="our-localization__element-coach-list">
-                                <div class="our-localization__element-coach-list-box">
-                                    <img src="./dist/images/boy-face.jpg" alt=""
-                                        class="our-localization__element-coach-list-img">
-                                </div>
+                            <li class="our-localization__element-coach-list">                                
                                 <p class="our-localization__element-coach-list-text">
                                     Jan Kowalski
                                 </p>
                             </li>
-                            <li class="our-localization__element-coach-list">
-                                <div class="our-localization__element-coach-list-box">
-                                    <img src="./dist/images/man-face8.jpg" alt=""
-                                        class="our-localization__element-coach-list-img">
-                                </div>
+                            <li class="our-localization__element-coach-list">                                
                                 <p class="our-localization__element-coach-list-text">
                                     Bartek Lewy
                                 </p>
                             </li>
-                            <li class="our-localization__element-coach-list">
-                                <div class="our-localization__element-coach-list-box">
-                                    <img src="./dist/images/man-face7.jpg" alt=""
-                                        class="our-localization__element-coach-list-img">
-                                </div>
+                            <li class="our-localization__element-coach-list">                                
                                 <p class="our-localization__element-coach-list-text">
                                     Bartek Kowalski
                                 </p>
@@ -248,29 +223,17 @@
                             Trenerzy:
                         </h3>
                         <ul class="our-localization__element-list">
-                            <li class="our-localization__element-coach-list">
-                                <div class="our-localization__element-coach-list-box">
-                                    <img src="./dist/images/boy-face.jpg" alt=""
-                                        class="our-localization__element-coach-list-img">
-                                </div>
+                            <li class="our-localization__element-coach-list">                                
                                 <p class="our-localization__element-coach-list-text">
                                     Jan Kowalski
                                 </p>
                             </li>
-                            <li class="our-localization__element-coach-list">
-                                <div class="our-localization__element-coach-list-box">
-                                    <img src="./dist/images/man-face8.jpg" alt=""
-                                        class="our-localization__element-coach-list-img">
-                                </div>
+                            <li class="our-localization__element-coach-list">                                
                                 <p class="our-localization__element-coach-list-text">
                                     Bartek Lewy
                                 </p>
                             </li>
-                            <li class="our-localization__element-coach-list">
-                                <div class="our-localization__element-coach-list-box">
-                                    <img src="./dist/images/man-face7.jpg" alt=""
-                                        class="our-localization__element-coach-list-img">
-                                </div>
+                            <li class="our-localization__element-coach-list">                                
                                 <p class="our-localization__element-coach-list-text">
                                     Bartek Kowalski
                                 </p>
@@ -303,7 +266,7 @@
             <div class="slider__extra-box">
                 <div class="slider__box">
                     <div class="slider__box-item white">
-                        <img src="./dist/images/man-face.jpg" alt="" class="slider__box-item-img">
+                        <img src="./dist/images/slider/man-face.jpg" alt="" class="slider__box-item-img">
                         <p class="slider__box-item-text">
                             Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
                             diam nonumy eirmod tempor invidunt ut labore et dolore magna
@@ -313,7 +276,7 @@
                         <h3 class="slider__box-item-heading">Jakub Kowalski</h3>
                     </div>
                     <div class="slider__box-item white">
-                        <img src="./dist/images/girl-face.jpg" alt="" class="slider__box-item-img">
+                        <img src="./dist/images/slider/girl-face.jpg" alt="" class="slider__box-item-img">
                         <p class="slider__box-item-text">
                             Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
                             diam nonumy eirmod tempor invidunt ut labore et dolore magna
@@ -323,7 +286,7 @@
                         <h3 class="slider__box-item-heading">Anna Wiśniewska</h3>
                     </div>
                     <div class="slider__box-item white">
-                        <img src="./dist/images/man-face2.jpg" alt="" class="slider__box-item-img">
+                        <img src="./dist/images/slider/man-face2.jpg" alt="" class="slider__box-item-img">
                         <p class="slider__box-item-text">
                             Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
                             diam nonumy eirmod tempor invidunt ut labore et dolore magna
@@ -333,7 +296,7 @@
                         <h3 class="slider__box-item-heading">Arkadziusz Wójcik</h3>
                     </div>
                     <div class="slider__box-item white">
-                        <img src="./dist/images/girl-face2.jpg" alt="" class="slider__box-item-img">
+                        <img src="./dist/images/slider/girl-face2.jpg" alt="" class="slider__box-item-img">
                         <p class="slider__box-item-text">
                             Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
                             diam nonumy eirmod tempor invidunt ut labore et dolore magna
