Fix menu link bug

--- a/index.html
+++ b/index.html
@@ -28,22 +28,22 @@
             <div class="nav__box">
                 <ul class="wrapper nav__list">
                     <li class="nav__list-item">
-                        <a href="index.html#" class="nav__link click-element">Home</a>
+                        <a href="#" class="nav__link click-element">Home</a>
                     </li>
                     <li class="nav__list-item">
-                        <a href="index.html#about-firm" class="nav__link click-element">O firmie</a>
+                        <a href="#about-firm" class="nav__link click-element">O firmie</a>
                     </li>
                     <li class="nav__list-item">
-                        <a href="index.html#why-we" class="nav__link click-element">Dlaczego my?</a>
+                        <a href="#why-we" class="nav__link click-element">Dlaczego my?</a>
                     </li>
                     <li class="nav__list-item">
-                        <a href="index.html#our-localization" class="nav__link click-element">Nasze lokalizacje</a>
+                        <a href="#our-localization" class="nav__link click-element">Nasze lokalizacje</a>
                     </li>
                     <li class="nav__list-item">
-                        <a href="index.html#opinion" class="nav__link click-element">Opinie</a>
+                        <a href="#opinion" class="nav__link click-element">Opinie</a>
                     </li>
                     <li class="nav__list-item">
-                        <a href="index.html#footer" class="nav__link click-element">Kontakt</a>
+                        <a href="#footer" class="nav__link click-element">Kontakt</a>
                     </li>
                 </ul>
             </div>
