--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa neque exercitationem dolores ut blanditiis harum odio mollitia non nihil qui distinctio, ab modi laborum deleniti!">
+    <meta name="description" content="Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa neque exercitationem dolores ut blanditiis harum odio mollitia non nihil qui distinctio, ab modi!">
     <title>FitnessGym Co.</title>
+
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&display=swap"
         rel="stylesheet">
