--- a/404.html
+++ b/404.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex">
     <title>FitnessGym Co. - Nie znaleziono 404</title>
+    
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+
+
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&display=swap"
         rel="stylesheet">
@@ -40,7 +44,7 @@
     </nav>
 
     <header class="header">
-        <h1 class="header__h1">FitnessGym Co. - Nie znaleziono 404</h1>
+        <h1 class="header__h1">Nie znaleziono 404</h1>
     </header>
 
     <footer class="footer section-padding black" id="footer">
